# CO2026PA2

./: .gitignore  Makefile  PA2.md  README.md  pyproject.toml
data/: fft.txt  mel_filter_bank.txt  mel_spectrogram.txt  power_spectrum.txt
include/: mel_spectrogram.h
scripts/: judge.py  mel_spectrogram.py  reference.py
src/: bench.c  main.c  utils.c
